Add pattern requirement to input.

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
   <div style='border: 2px solid black; padding: 10px'>
     <form id='form1'>
       <p>Submit an array: <br>
-        <input id='input-section-0' type='text' required placeholder='[1,2,3,4,5]'></input></p>
+        <input id='input-section-0' type='text' required placeholder='[1,2,3,4,5]' pattern='^[\[][^\[\]]+[\]]'></input></p>
         <p><button id='button1' type='submit'>Submit</button></p>
       </form>
     </div>
